[tool.poetry]
name = "bookit"
version = "1.0.0"
description = "TODO description"
authors = ["Dan Park <dcpark913@gmail.com>"]
readme = "README.md"
# packages = [{ include = "bookit", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
retry = "^0.9.2"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    .eggs
    | .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | build
    | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-s", "--cov=bookit", "--cov-report=term-missing", "--cov-fail-under=80"]
testpaths = ["tests/test_resy_client.py"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
